--- a/app/src/main/res/layout/activity_llamada.xml
+++ b/app/src/main/res/layout/activity_llamada.xml
@@ -1,9 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lab.componentessmartphone.LlamadaActivity">
+    android:orientation="vertical"
+    tools:context="com.lab.componentessmartphone.LlamadaActivity"
+    android:weightSum="1">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/lamadaLbl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Realizar llamada telefónica"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:layout_weight="0.02" />
+
+    <EditText
+        android:id="@+id/numeroLlamada"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.02"
+        android:ems="10"
+        android:hint="Número de Teléfono"
+        android:inputType="phone"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/llamarBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.02"
+        android:onClick="realizarLlamada"
+        android:text="Llamar" />
+</LinearLayout>
