--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -34,4 +34,32 @@
                 android:src="@drawable/play"/>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/playVideoBtn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:onClick="reproducirVideo"
+            android:text="Play Video"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:id="@+id/stopVideoBtn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:onClick="stopVideo"
+            android:text="Stop Video" />
+    </LinearLayout>
+
+    <VideoView
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
